# searcher-cli-starter

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HYBRID_CRATE_GUIDE.md  README.md  test.txt
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md
examples/: library_usage.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/fixtures/: sample.txt
